--- a/index.html
+++ b/index.html
@@ -1,46 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Document</title>
 
-    <link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" type="text/css" href="main.css">
 
-    <script src="node_modules/web3/dist/web3.min.js"></script>
+	<script src="node_modules/web3/dist/web3.min.js"></script>
 
 </head>
+
 <body>
-    <div class="container">
+	<div class="container">
 
-        <h1>Coursetro Instructor</h1>
+		<h1>Coursetro Instructor</h1>
 
-        <h2 id="instructor"></h2>
+		<h2 id="instructor"></h2>
+		<img id="loader" src="https://loading.io/spinners/double-ring/lg.double-ring-spinner.gif">
 
-        <label for="name" class="col-lg-2 control-label">Instructor Name</label>
-        <input id="name" type="text">
+		<label for="name" class="col-lg-2 control-label">Instructor Name</label>
+		<input id="name" type="text">
 
-        <label for="name" class="col-lg-2 control-label">Instructor Age</label>
-        <input id="age" type="text">
+		<label for="name" class="col-lg-2 control-label">Instructor Age</label>
+		<input id="age" type="text">
 
-        <button id="button">Update Instructor</button>
+		<button id="button">Update Instructor</button>
 
 
-    </div>
+	</div>
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 
-    <script>
-       if (typeof web3 !== 'undefined'){
-           web3 = new Web3(web3.currentProvider);
-       } else {
-           web3 = new Web3(new Web3.providers.HttpProvider("http://localhost:8545"));
-       }
+	<script>
+		if (typeof web3 !== 'undefined') {
+			web3 = new Web3(web3.currentProvider);
+		} else {
+			// set the provider you want from Web3.providers
+			web3 = new Web3(new Web3.providers.HttpProvider("http://localhost:8545"));
+		}
 
-       web3.eth.dafaultAccount = web3.eth.accounts[0];
+		web3.eth.defaultAccount = web3.eth.accounts[0];
 
-       var my_test_contract = web3.eth.contract([
+		var CoursetroContract = web3.eth.contract([
 	{
 		"constant": false,
 		"inputs": [
@@ -76,28 +80,60 @@
 		"payable": false,
 		"stateMutability": "view",
 		"type": "function"
+	},
+	{
+		"anonymous": false,
+		"inputs": [
+			{
+				"indexed": false,
+				"name": "name",
+				"type": "string"
+			},
+			{
+				"indexed": false,
+				"name": "age",
+				"type": "uint256"
+			}
+		],
+		"name": "Instructor",
+		"type": "event"
 	}
 ]);
 
-var my_test = my_test_contract.at('0xd720e692a32adcfb9dffe6e316f9ff957d2438b5');
+		var Coursetro = CoursetroContract.at("0x34abebf6645bd85491791f24073eaa4570d49f23");
 
-console.log(my_test);
+		console.log(Coursetro);
 
-my_test.getInstructor(function(error, result){
-	if(!error){
-		$('#instructor').html(result[0] + ' (' + result[1] + ' years old)');
-	} else {
-		console.log(error);
-	}
-});
 
-$('#button').click(function(){
-	my_test.setInstructor($('#name').val(), $('#age').val());
-})
-    
-    </script>
+		var instructorEvent = Coursetro.Instructor();
 
-    
+		instructorEvent.watch(function (error, result) {
+			if (!error) {
+				$('#loader').hide();
+				$('#instructor').html(result.args.name + ' (' + result.args.age + ' years old)');
+			} else {
+				$('#loader').hide();
+				console.log(error);
+			}
+		});
+
+		// Coursetro.getInstructor(function(error, result){
+		// 	if(!error){	
+		// 		$('#instructor').html(result[0] + ' (' + result[1] + ' years old)');
+		// 	} else {
+		// 		console.log(error);
+		// 	}
+		// });
+
+		$('#button').click(function () {
+			Coursetro.setInstructor($('#name').val(), $('#age').val());
+			$('#loader').show();
+		})
+
+	</script>
+
+
 
 </body>
+
 </html>
